changed color palette and fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 .background-image {
-    content: "";
     background: url("/assets/palm-trees.jpg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -7,6 +6,16 @@
     background-attachment: fixed;
     opacity: 0.25;
     /* Adjust as needed */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+.background-placeholder {
+    background-color: #EDEDF4;
     position: fixed;
     top: 0;
     left: 0;
