--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,3 +1,3 @@
 #header {
-    background-color: #6DD3CE;
+    background-color: #71A2AF;
 }
