--- a/src/components/SearchResult.css
+++ b/src/components/SearchResult.css
@@ -1,5 +1,5 @@
 #result-box {
-    background-color: #C8E9A0;
+    background-color: #71A2AF;
     border-radius: 15px;
     font-weight: bold;
 }
